added logic to change password
